[package]
name = "blockchain"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.1.5"
hex = "0.4.3"
sha2 = "0.10.2"
serde =  { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
itoa = "1.0.1"
